// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > should render 1`] = `
<div>
  <button
    class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center text-white rounded duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-600 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500 focus:outline-hidden focus:ring-theme-primary-400"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button > should render a large one 1`] = `
<div>
  <button
    class="inline-flex relative justify-center items-center py-4 px-6 space-x-4 font-semibold leading-tight text-center text-white rounded duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-600 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500 focus:outline-hidden focus:ring-theme-primary-400"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button > should render a small one 1`] = `
<div>
  <button
    class="inline-flex relative justify-center items-center py-2 px-3 space-x-2 text-sm font-semibold leading-tight text-center text-white rounded duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-600 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500 focus:outline-hidden focus:ring-theme-primary-400"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button > should render an icon 1`] = `
<div>
  <button
    class="inline-flex relative justify-center items-center p-3 font-semibold leading-tight text-center text-white rounded duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-600 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500 focus:outline-hidden focus:ring-theme-primary-400"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button > should render as danger button 1`] = `
<div>
  <button
    class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer dark:text-white hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:hover:bg-theme-danger-300 hover:bg-theme-danger-400 focus:outline-hidden focus:ring-theme-danger-300"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button > should render as info button 1`] = `
<div>
  <button
    class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer dark:text-white hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-info-100 text-theme-info-600 dark:bg-theme-info-600 hover:bg-theme-info-700 focus:outline-hidden focus:ring-theme-info-300"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button > should render as primary button 1`] = `
<div>
  <button
    class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center text-white rounded duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-600 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500 focus:outline-hidden focus:ring-theme-primary-400"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button > should render as reverse button 1`] = `
<div>
  <button
    class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer dark:text-white hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-reverse-100 text-theme-primary-reverse-600 dark:bg-theme-primary-reverse-600 hover:bg-theme-primary-reverse-700 focus:outline-hidden focus:ring-theme-primary-reverse-300"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button > should render as secondary button 1`] = `
<div>
  <button
    class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-dark-800 dark:text-theme-dark-50 dark:hover:bg-theme-primary-500 hover:bg-theme-primary-800 focus:outline-hidden focus:ring-theme-primary-400"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button > should render as transparent button 1`] = `
<div>
  <button
    class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center rounded border-none duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden focus:outline-hidden focus:ring-theme-primary-400"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button > should render as warning button 1`] = `
<div>
  <button
    class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer dark:text-white hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-warning-100 text-theme-warning-700 dark:bg-theme-warning-600 hover:bg-theme-warning-700 focus:outline-hidden focus:ring-theme-warning-300"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button > should render if disabled 1`] = `
<DocumentFragment>
  <button
    class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 focus:outline-hidden focus:ring-theme-primary-400 disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400"
    data-testid="Button"
    disabled=""
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    >
      Click
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button > should render loading with icon 1`] = `
<div>
  <button
    class="inline-flex relative justify-center items-center p-3 font-semibold leading-tight text-center text-white rounded duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-600 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500 focus:outline-hidden focus:ring-theme-primary-400"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    >
      <div
        class="flex items-center"
      >
        <span
          class="flex invisible items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            />
          </div>
        </span>
        <div
          class="flex absolute top-0 left-0 justify-center items-center w-full h-full"
        >
          <div
            class="w-6 h-6 rounded-full border-4 animate-spin border-theme-primary-700 border-l-white"
          />
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`Button > should render with icon and custom icon size 1`] = `
<div>
  <button
    class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center text-white rounded duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-600 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500 focus:outline-hidden focus:ring-theme-primary-400"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    >
      <div>
        <div
          style="height: 20px; width: 20px;"
        >
          <svg
            id="plus"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            >
              <path
                d="M1 10h18M10 1v18"
              />
            </g>
          </svg>
        </div>
      </div>
      Click Me
    </div>
  </button>
</div>
`;

exports[`Button > should render with icon on the left side 1`] = `
<div>
  <button
    class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center text-white rounded duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-600 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500 focus:outline-hidden focus:ring-theme-primary-400"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        >
          <svg
            id="plus"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            >
              <path
                d="M1 10h18M10 1v18"
              />
            </g>
          </svg>
        </div>
      </div>
      Click Me
    </div>
  </button>
</div>
`;

exports[`Button > should render with icon on the right side 1`] = `
<div>
  <button
    class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center text-white rounded duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-600 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500 focus:outline-hidden focus:ring-theme-primary-400"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    >
      Click Me
      <div>
        <div
          style="height: 16px; width: 16px;"
        >
          <svg
            id="plus"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            >
              <path
                d="M1 10h18M10 1v18"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`Button > should render with loading state enabled 1`] = `
<div>
  <button
    class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center text-white rounded duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-600 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500 focus:outline-hidden focus:ring-theme-primary-400"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    >
      <div
        class="flex items-center"
      >
        <span
          class="flex invisible items-center space-x-2"
        >
          Click Me
        </span>
        <div
          class="flex absolute top-0 left-0 justify-center items-center w-full h-full"
        >
          <div
            class="w-6 h-6 rounded-full border-4 animate-spin border-theme-primary-700 border-l-white"
          />
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`Button > should render with theme 1`] = `
<DocumentFragment>
  <button
    class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden focus:outline-hidden focus:ring-theme-primary-400 disabled:bg-theme-secondary-800 disabled:text-theme-secondary-700"
    data-testid="Button"
    disabled=""
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    >
      Click
    </div>
  </button>
</DocumentFragment>
`;
